# DDI_with_ML

./: .gitignore  Copy of BioSnap_PyG_ link pred_DDI.ipynb  Drug_description.csv  Drug_description_1000.csv  README.md  minimal_notebook.ipynb  pyproject.toml  pytest.ini  requirements.txt  test_mask.csv  working_nb copy.py  working_nb.py
.github/workflows/: ci.yml
LaTeX/: README 2.md  references.bib  report 2.tex  report 3.aux  report 3.blg  report 3.fls  report 3.lof  report 3.toc  report.fdb_latexmk
Notebooks/CRESCENDDI/: crescenddi.ipynb
Notebooks/visualize_embeddings/: visualize_embedd.ipynb
Notebooks/visualize_embeddings_last_layer/: analyze_trained_model.ipynb  test.py  train_model_DESC.py
analysis/: report copy.ipynb  report.ipynb
analysis/analysis_after_training/: analyze_trained_model copy.ipynb  analyze_trained_model.ipynb
analysis/visualize_embeddings/: minimal_visualize_embedd copy.ipynb  old_minimal_visualize_embedd.ipynb
analysis/visualize_embeddings_last_layer/: analyze_trained_model.ipynb
data_preparation/: combine_CRESCENDDI_and_DB.ipynb  combine_features.ipynb  create_CRESCENDDI_graph.ipynb  crescenddi.ipynb  enricht_drug_info.ipynb  ogbl-ddi_dataset.ipynb
data_preparation/_old_graph_preparation/: crescenddi.ipynb
ddi_graph_neural_network/: README.md  config.py  data_utils.py  model.py  requirements.txt  train_model.py  train_model_include_ghost_nodes.py
legacy/Original_Training/: minimal_notebook.ipynb
report/: README.md  report.html  report.ipynb  report.py  report_utils.py
report/mytemplate/: custom.css  index.html.j2
scripts/: run_training.py
tests/: test_ddi_graph_neural_network.py
(+5 files in other folders)
