[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DDI_with_ML"
version = "0.0.1"
description = "Predicting drug-drug interactions using machine learning"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "lgiobbi" } ]
license = { text = "MIT" }
dependencies = [
    "numpy==1.26.4",
    "pandas==2.3.2",
    "pytest==8.4.1",
    "scikit-learn==1.7.2",
    "torch==2.8.0",
    "torch-geometric==2.6.1",
    "torchvision",
    "plotly",
    "nbformat>=5.10.4",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "gdown",
    "seaborn",
    "flashtext>=2.7",
    "rapidfuzz>=3.14.3",
    "openpyxl>=3.1.5",
    "mlflow>=3.10.1",
    "ogb>=1.3.6",
    "tabulate>=0.10.0",
    "statsmodels>=0.14.6",
    "jupytext>=1.19.1",
    "ipywidgets>=8.1.8",
]

[project.urls]
"Repository" = "https://github.com/lgiobbi/DDI_with_ML"

[tool.setuptools.packages.find]
where = ["."]
include = ["ddi_graph_neural_network*"]

[tool.setuptools]
include-package-data = true
